# rules_dotnet

examples/: example_deps.bzl  paket.dependencies
examples/blazor/: App.razor  BUILD.bazel  Program.cs  _Imports.razor
examples/blazor/Pages/: _Host.cshtml
examples/blazor/Properties/: launchSettings.json
